Assignment2_Zhao_Duo/tests/automated/tests/bad/ScientificNotationBigMinus.calc
a .0E- b 1.E- c 2.3E- d 34.5E- e 6.78E- f 99.99E- g 3E- h 76E-
.0E-
1.E-
2.3E-
34.5E-
6.78E-
99.99E-
3E-
76E-
a .0E- b 1.E- c 2.3E- d 34.5E- e 6.78E- f 99.99E- g 3E- h 76E-
.0E-
1.E-
2.3E-
34.5E-
6.78E-
99.99E-
3E-
76E-
